# webbografico

./: .gitignore  .pre-commit-config.yaml  .watchmanconfig  Dockerfile  LICENSE  README.md  conftest.py  entrypoint.sh  justfile  manage.py  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: tests.yaml
core/: forms.py  settings.py  urls.py  views.py
core/settings/: base.py  test.py
projects/: admin.py  forms.py  models.py  test.py  urls.py  utils.py  views.py
projects/migrations/: 0001_initial.py  0001_squashed_0012_alter_image_image.py  0002_alter_project_images_alter_project_technologies.py  0003_alter_tech_options_alter_project_hero_image.py  0004_project_slug.py  0005_remove_project_images_image_project.py  0006_image_title.py  0007_alter_project_hero_image.py  0008_alter_project_hero_image.py  0009_alter_image_image.py  0010_alter_image_image_alter_project_hero_image.py  0011_alter_project_hero_image.py  0012_alter_image_image.py  0013_project_short_desc_alter_image_project_and_more.py  0014_alter_project_description.py
static/css/: tailwind.css
static/src/: input.css
templates/: base.html  footer.html  gallery-modal.html  messages.html  navbar.html
templates/core/: article-list.html  contact-success.html  contact.html  index.html
templates/cotton/: blog_excerpt.html  card.html  other_image.html
templates/projects/: project-detail.html  projects-list.html
tests/core/: factories.py  test_views.py
tests/projects/: factories.py  test_models.py  test_utils.py  test_views.py
