[project]
dependencies = [
  "django-browser-reload>=1.15.0",
  "django-environ>=0.11.2",
  "django-fastdev>=1.10.0",
  "django-tailwind-cli>=2.16.0",
  "django>=5.1.1"
]
description = "Code for my personal website, hosted at https://webbografico.com"
name = "webbografico"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.uv]
dev-dependencies = [
  "djlint>=1.35.2",
  "pywatchman>=2.0.0"
]
